--- a/src/docs/asciidoc/attributes.adoc
+++ b/src/docs/asciidoc/attributes.adoc
@@ -2,5 +2,8 @@
 :icons: font
 :srcdir: ../../main/java/fr/uvsq/refcardjava
 :tstdir: ../../test/java/fr/uvsq/refcardjava
-:jlsurl: https://docs.oracle.com/javase/specs/jls/se14/html
+:jlsurl: https://docs.oracle.com/javase/specs/jls/se15/html
+:manurl: https://docs.oracle.com/en/java/javase/15/docs/specs/man
+:tutourl: https://docs.oracle.com/javase/tutorial
+:apiurl: https://docs.oracle.com/en/java/javase/15/docs/api
 :source-highlighter: coderay
